# Projeto_FMS

./: .env  .gitignore  Dockerfile  README.md  database.db  docker-compose.yaml  main.py  pyproject.toml
src/coleta_de_dados/coleta_de_dados/: settings.py  testes.py
src/coleta_de_dados/coleta_de_dados/spiders/: amazon.py
src/coleta_mercado/: captura_mercado.py
src/etl/: data_base_config.py  etl_scrap.py  testes.py
